[gd_scene load_steps=14 format=3 uid="uid://dv8b4eqlbj1bs"]

[ext_resource type="Script" path="res://Scripts/enemy_shotgun.gd" id="1_1ijdq"]
[ext_resource type="PackedScene" uid="uid://bpjy41a4ivlto" path="res://Scenes/enemy_shotgun_possesed.tscn" id="2_4tuyn"]
[ext_resource type="PackedScene" uid="uid://betu6w6h8ifru" path="res://Scenes/bullet.tscn" id="3_yt5u0"]
[ext_resource type="PackedScene" uid="uid://biydkhgn0iqf8" path="res://Models/test_soldier_shotgun.tscn" id="4_qtj4u"]
[ext_resource type="PackedScene" uid="uid://dxxkp8ynemrxi" path="res://Scenes/flash.tscn" id="4_xh6w4"]
[ext_resource type="Texture2D" uid="uid://ds6gt02kyarks" path="res://Assets/White_Circle.svg.png" id="5_gx7xg"]
[ext_resource type="ArrayMesh" uid="uid://biqyesxminuwo" path="res://Pruebas/muzzle_flash.obj" id="5_tvfxl"]
[ext_resource type="Shader" uid="uid://bnqwgryv7mvwa" path="res://Pruebas/Muzzle_flash.tres" id="6_iy8kt"]

[sub_resource type="Animation" id="Animation_k8wjg"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, 0.0, 0.6]
}

[sub_resource type="Animation" id="Animation_1lnew"]
resource_name = "slash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, 0.0, 0.6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bwn2"]
_data = {
"RESET": SubResource("Animation_k8wjg"),
"slash": SubResource("Animation_1lnew")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i3dnt"]
render_priority = 0
shader = ExtResource("6_iy8kt")
shader_parameter/ColorParameter = Color(0.929993, 0.468393, 0, 1)
shader_parameter/FloatParameter = -0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_vgwi1"]
size = Vector3(1, 1.34714, 1)

[node name="Enemy_Shotgun" type="CharacterBody3D" groups=["mob"]]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1ijdq")
posseses_enemy = ExtResource("2_4tuyn")
bullet = ExtResource("3_yt5u0")
flash = ExtResource("4_xh6w4")
damage_force = 20

[node name="Pivot" type="Node3D" parent="."]

[node name="Enemy" parent="Pivot" instance=ExtResource("4_qtj4u")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.18, -0.03)

[node name="BulletPoint" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0389553, 1.33074, 1.22267)

[node name="Timer" type="Timer" parent="Pivot/BulletPoint"]
wait_time = 2.0
autostart = true

[node name="Flash" type="Node3D" parent="Pivot"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.053, 1.3, 1.534)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/Flash"]
libraries = {
"": SubResource("AnimationLibrary_3bwn2")
}
speed_scale = 3.0

[node name="MuzzleFlash" type="MeshInstance3D" parent="Pivot/Flash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.421432, -0.29274, 1.19209e-07, 0.487322)
mesh = ExtResource("5_tvfxl")
surface_material_override/0 = SubResource("ShaderMaterial_i3dnt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.911784, 0)
shape = SubResource("BoxShape3D_vgwi1")

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00383072, 0.208869, -0.00303593)
size = Vector3(1, 0.493, 1)
texture_albedo = ExtResource("5_gx7xg")
modulate = Color(0, 0, 0, 1)

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Damage_Color_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Pivot/BulletPoint/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Damage_Color_Timer" to="." method="_on_damage_color_timer_timeout"]
